<?xml version="1.0"?>
<package>
  <name>robot_stage</name>
  <version>0.0.1</version>
  <description>
    Stage version of robot simulation. Convenient to test 2D-navigation related stuffs
  </description>

  <maintainer email="zxc455233@gmail.com">NEET</maintainer>
  <author email="zxc455233@gmail.com">NEET</author>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/turtlebot_stage</url>
  <!--<url type="repository">https://github.com/turtlebot/turtlebot_simulator</url>-->
  <!--<url type="bugtracker">https://github.com/turtlebot/turtlebot_simulator/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlebot_bringup</build_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>yocs_virtual_sensor</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
</package>
